--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+addons/github-integration/*
+
+project.godot
+
+icon.png.import
+
+default_env.tres
+
+icon.png
+
+test.tscn
